--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -94,9 +94,11 @@ header {
 	background-size: cover;
 	// background-size: 100% 100%; 
 	// overflow: hidden;
-	background-repeat: no-repeat;
-	background-position: 100% 100%;
-	background: url(../img/s1.png);
+	// background-repeat: no-repeat;
+	background-position: 50% 50%; /* Положение фона */
+    background-repeat: no-repeat; 
+	// background-position: 0% 0%;
+	background-image: url(../img/s1.png);
 	
 	&__div {
 		padding-top: 30vh;
@@ -261,35 +263,36 @@ header {
 .section4 {
 	background-color: #ffe92f;
 	&__item {
-		font-size: 0;
+		// font-size: 0;
 		// outline: 1px solid red;
+		// min-height: 50%;
+		// flex-wrap: wrap;
+		// padding-bottom: 30px;
 		color: #fff;
-		height: 520px;
 		display: flex;
-		flex-wrap: wrap;
-		padding-bottom: 30px;
 		&--down {
-			height: 365px;
-			font-size: 0;
+			// height: 365px;
+			// font-size: 0;
 			padding-bottom:0;
 			margin-bottom:50px;
 		}
 		&--right {
-			width: 700px;
+			max-width: 700px;
 			margin: 0 auto;
-			// outline: 2px solid red;
 			text-align: center;
+			// outline: 2px solid red;
 		}
 	}
 	&__big{
 		width:70%;
-		height: 100%;
 		padding-right: 30px;//2.8%;
-		// outline: 2px solid black;
+		// outline: 4px solid black;
+		// min-height: 100%;
+		padding-bottom: 30px;
 	}
 	&__md {
 		width: 50%;
-		height: 100%;
+		// height: 100%;
 		padding-left: 15px;
 		&:first-child {
 			padding-left: 0;
@@ -298,26 +301,28 @@ header {
 	}
 	&__sm {
 		width: 30%;
-		height: 100%;
-		height: 520px;
-		font-size: 0;
+		// min-height: 100%;
+		// font-size: 0;
+		// height: 520px;
 		// outline: 2px solid green;
-		display: inline-block;
+		// display: inline-block;
 		&--50 {
-			width: 100%;
+			// width: 100%;
+			// height: 260px;
+			padding-bottom: 30px;
 			font-size: 0;
-			height: 260px;
-			// outline: 2px solid yellow;
-			padding-bottom: 30px;//9%;
+			height: 50%;
+			// outline: 2px solid black;
 		}
 	}
 	&__img {
 		// outline: 1px solid red;
-		width: 100%;
-    	height: auto;
-   	 	height:100%;
    	 	// background-size: cover;
-   	 	background-position: 100% 100%;
+    	// height: auto;
+   	 	// background-position: 50% 50%;
+		width: 100%;
+   	 	height:100%;
+   	 	// padding-bottom: 30px;
    	 	box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.5);
    	 	transition: all .6s ease-in-out;
    	 	&:hover,
